...
  }

  @override
  Widget build(BuildContext context) {
    final auth = context.watch<AuthProvider>();
    return Scaffold(
      appBar: AppBar(title: const Text('Criar conta')),
      body: Form(
        key: _formKey,
        child: ListView(padding: const EdgeInsets.all(24), children: [
          TextFormField(
            controller: _email,
            keyboardType: TextInputType.emailAddress,
...
            ),
          const SizedBox(height: 12),
          FilledButton(
              onPressed: auth.loading ? null : _submit,
              child: auth.loading
                  ? const CircularProgressIndicator()
                  : const Text('Cadastrar')),
        ]),
      ),
    );
  }
}

