appId: pueblo.bank
---
- launchApp:
    clearState: true
- tapOn:
    id: ".*email.*"
- inputText: "pos@fiap.com.br"
- tapOn:
    id: ".*password.*"
- inputText: "123456"
- tapOn: "Entrar"
- assertVisible: "Visão geral"
- tapOn: "Ver transações"
- assertVisible: "Transações"
- tapOn:
    id: ".*filter.*"
- tapOn: "Depósito"
- tapOn: "Aplicar"
- assertVisible: "Transações"
